# PhoneScope

./: .gitignore  PHONESCOPE_MASTER_PLAN_V2.md  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/workflows/: ci.yml
app/: build.gradle.kts  proguard-rules.pro
app/schemas/com.phonescope.inspector.data.local.AppDatabase/: 1.json
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/engine/: ai_inspector.cpp  ai_inspector.h  cpu_inspector.cpp  cpu_inspector.h  gpu_inspector.cpp  gpu_inspector.h  kernel_inspector.cpp  kernel_inspector.h  memory_inspector.cpp  memory_inspector.h  process_inspector.cpp  process_inspector.h  storage_benchmark.cpp  storage_benchmark.h  thermal_inspector.cpp  thermal_inspector.h
app/src/main/cpp/jni/: jni_bridge.cpp
app/src/main/cpp/tests/: file_util_test.cpp  proc_reader_test.cpp  prop_reader_test.cpp  sys_reader_test.cpp
app/src/main/cpp/util/: file_util.cpp  file_util.h  proc_reader.cpp  proc_reader.h  prop_reader.cpp  prop_reader.h  sys_reader.cpp  sys_reader.h
app/src/main/kotlin/com/phonescope/inspector/: MainActivity.kt  PhoneScopeApp.kt
app/src/main/kotlin/com/phonescope/inspector/data/jni/: NativeEngine.kt
app/src/main/kotlin/com/phonescope/inspector/data/local/: AppDatabase.kt  MonitorDao.kt  ScanDao.kt
app/src/main/kotlin/com/phonescope/inspector/di/: AppModule.kt  DatabaseModule.kt
app/src/main/kotlin/com/phonescope/inspector/domain/model/: HardwareModels.kt
app/src/main/kotlin/com/phonescope/inspector/service/: PhoneScopeMonitorService.kt
app/src/main/kotlin/com/phonescope/inspector/ui/components/: ComingSoonScreen.kt  HardwareMeter.kt
app/src/main/kotlin/com/phonescope/inspector/ui/dashboard/: DashboardScreen.kt  DashboardViewModel.kt
app/src/main/kotlin/com/phonescope/inspector/ui/monitor/: MonitorScreen.kt  MonitorViewModel.kt
app/src/main/kotlin/com/phonescope/inspector/ui/navigation/: BottomNavBar.kt  NavGraph.kt  Screen.kt
app/src/main/kotlin/com/phonescope/inspector/ui/process/: ProcessListScreen.kt
app/src/main/kotlin/com/phonescope/inspector/ui/properties/: PropertiesScreen.kt
app/src/main/kotlin/com/phonescope/inspector/ui/scan/: ScanScreen.kt  ScanViewModel.kt
app/src/main/kotlin/com/phonescope/inspector/ui/security/: SecurityScreen.kt
app/src/main/res/values/: font_certs.xml  strings.xml  themes.xml
app/src/main/res/xml/: file_paths.xml
gradle/: libs.versions.toml
(+7 files in other folders)
